# CMakeTemplateProject

./: .clang-tidy  CMakeLists.txt
src/: WinMain.cpp  main.cpp  main.h  pch.h
